feat(update): fix db stuff and start entity routes
