# src/generated/swagger.json
@@ -6,7 +6,44 @@
     "description": "Restful API for the CordX Services"
   },
   "host": "0.0.0.0:4995",
+  "tags": [
+    {
+      "name": "Root",
+      "description": "Root API"
+    },
+    {
+      "name": "Entities",
+      "description": "Entities API"
+    },
+    {
+      "name": "Users",
+      "description": "Users API"
+    }
+  ],
   "paths": {
+    "/entities": {
+      "get": {
+        "tags": [
+          "Entities"
+        ],
+        "description": "List all of our available entities",
+        "responses": {
+          "200": {
+            "description": "Returns a list of all entities",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Entity"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/files": {
       "get": {
         "tags": [
@@ -49,6 +86,40 @@
   },
   "components": {
     "schemas": {
+      "Entity": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "The Entity's CordX Cornflake ID"
+          },
+          "type": {
+            "type": "string",
+            "description": "The type of entity (User, Organization)"
+          },
+          "domain": {
+            "type": "string",
+            "description": "The domain of the entity"
+          },
+          "_count": {
+            "type": "object",
+            "properties": {
+              "domains": {
+                "type": "number",
+                "description": "The number of domains associated with the entity"
+              },
+              "uploads": {
+                "type": "number",
+                "description": "The number of uploads created by the entity"
+              },
+              "webhooks": {
+                "type": "number",
+                "description": "The number of webhooks associated with the entity"
+              }
+            }
+          }
+        }
+      },
       "File": {
         "type": "object",
         "properties": {
@@ -74,6 +145,5 @@
         }
       }
     }
-  },
-  "tags": []
+  }
 }
